JEI & EMI handler consolidation